Implemented api to save eservices and added Junit tests
